--- a/src/about-us.html
+++ b/src/about-us.html
@@ -56,11 +56,11 @@
 
     <header class="header js-header">
       <div class="header__inner">
-        <h1 class="header__logo">
+        <div class="header__logo">
           <a href="./index.html">
             <img src="./assets/images/common/codeups.svg" alt="CodeUpsのロゴ" />
           </a>
-        </h1>
+        </div>
 
         <nav class="header__nav">
           <ul class="header__nav-items">
@@ -211,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">About us</h2>
+          <h1 class="sub-page-title__main">About us</h1>
         </div>
       </section>
 
@@ -279,7 +279,7 @@
           <div class="sub-about-us__gallery gallery">
             <div class="gallery__inner">
               <div class="gallery__header section-header">
-                <p class="section-header__title">Gallery</p>
+                <h3 class="section-header__title">Gallery</h3>
                 <h2 class="section-header__sub">フォト</h2>
               </div>
 
@@ -329,9 +329,8 @@
                   </li>
                 </ul>
                 <div class="modal">
-                  <div class="bigimg"><img src="" alt="" /></div>
+                  <div class="bigimg"></div>
                 </div>
-                <!-- <div class="zoom__content"></div> -->
               </div>
             </div>
           </div>
