--- a/src/blog-detail.html
+++ b/src/blog-detail.html
@@ -56,11 +56,11 @@
 
     <header class="header js-header">
       <div class="header__inner">
-        <h1 class="header__logo">
+        <div class="header__logo">
           <a href="./index.html">
             <img src="./assets/images/common/codeups.svg" alt="CodeUpsのロゴ" />
           </a>
-        </h1>
+        </div>
 
         <nav class="header__nav">
           <ul class="header__nav-items">
@@ -76,7 +76,7 @@
               >
             </li>
             <li class="header__nav-item">
-              <a href="#">Blog<span>ブログ</span></a>
+              <a href="./blog.html">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
               <a href="./voice.html">Voice<span>お客様の声</span></a>
@@ -211,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">Blog</h2>
+          <h1 class="sub-page-title__main">Blog</h1>
         </div>
       </section>
 
@@ -396,7 +396,7 @@
                         </p>
 
                         <div class="review-card__button">
-                          <a href="#" class="button">
+                          <a href="./voice.html" class="button">
                             <span>View more</span>
                           </a>
                         </div>
@@ -418,7 +418,9 @@
                             alt="海の中を色鮮やかなたくさんの魚が泳いでいる様子"
                           />
                         </div>
-                        <div class="campaign-card__item-body">
+                        <div
+                          class="campaign-card__item-body campaign-card__item-body--aside"
+                        >
                           <div class="campaign-card__meta">
                             <p
                               class="campaign-card__category campaign-card__category--center"
@@ -431,8 +433,12 @@
                               全部コミコミ(お一人様)
                             </p>
                             <div class="campaign-card__price-body">
-                              <span class="campaign-card__price">¥56,000</span>
-                              <span class="campaign-card__price-discount"
+                              <span
+                                class="campaign-card__price campaign-card__price--small"
+                                >¥56,000</span
+                              >
+                              <span
+                                class="campaign-card__price-discount campaign-card__price-discount--small"
                                 >¥46,000</span
                               >
                             </div>
@@ -449,7 +455,9 @@
                             alt="海の中を色鮮やかなたくさんの魚が泳いでいる様子"
                           />
                         </div>
-                        <div class="campaign-card__item-body">
+                        <div
+                          class="campaign-card__item-body campaign-card__item-body--aside"
+                        >
                           <div class="campaign-card__meta">
                             <p
                               class="campaign-card__category campaign-card__category--center"
@@ -462,8 +470,12 @@
                               全部コミコミ(お一人様)
                             </p>
                             <div class="campaign-card__price-body">
-                              <span class="campaign-card__price">¥24,000</span>
-                              <span class="campaign-card__price-discount"
+                              <span
+                                class="campaign-card__price campaign-card__price--small"
+                                >¥24,000</span
+                              >
+                              <span
+                                class="campaign-card__price-discount campaign-card__price-discount--small"
                                 >¥18,000</span
                               >
                             </div>
@@ -472,7 +484,7 @@
                       </a>
                     </li>
                     <div class="review-card__button">
-                      <a href="#" class="button">
+                      <a href="./campaign.html" class="button">
                         <span>View more</span>
                       </a>
                     </div>
@@ -502,7 +514,7 @@
         </div>
       </div>
 
-      <section class="contact layout-contact layout-contact--aboutus">
+      <section class="contact layout-contact layout-contact--blog">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -558,7 +570,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-footer--blog">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
