--- a/src/campaign.html
+++ b/src/campaign.html
@@ -56,11 +56,11 @@
 
     <header class="header js-header">
       <div class="header__inner">
-        <h1 class="header__logo">
+        <div class="header__logo">
           <a href="./index.html">
             <img src="./assets/images/common/codeups.svg" alt="CodeUpsのロゴ" />
           </a>
-        </h1>
+        </div>
 
         <nav class="header__nav">
           <ul class="header__nav-items">
@@ -211,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">Campaign</h2>
+          <h1 class="sub-page-title__main">Campaign</h1>
         </div>
       </section>
 
@@ -265,7 +265,8 @@
                       <p class="campaign-card__title">全部コミコミ(お一人様)</p>
                       <div class="campaign-card__price-body">
                         <span class="campaign-card__price">¥56,000</span>
-                        <span class="campaign-card__price-discount"
+                        <span
+                          class="campaign-card__price-discount campaign-card__price-discount--small"
                           >¥46,000</span
                         >
                       </div>
@@ -274,11 +275,7 @@
                           ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                         </p>
                         <div class="campaign-card__wrap">
-                          <time
-                            class="campaign-card__date"
-                            datetime="2023-06-01/2023-09-30"
-                            >2023/6/1-9/30</time
-                          >
+                          <span class="campaign-card__date">2023/6/1-9/30</span>
                           <p class="contact__button-text">
                             ご予約・お問い合わせはコチラ
                           </p>
@@ -324,11 +321,7 @@
                           ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                         </p>
                         <div class="campaign-card__wrap">
-                          <time
-                            class="campaign-card__date"
-                            datetime="2023-06-01/2023-09-30"
-                            >2023/6/1-9/30</time
-                          >
+                          <span class="campaign-card__date">2023/6/1-9/30</span>
                           <p class="contact__button-text">
                             ご予約・お問い合わせはコチラ
                           </p>
@@ -374,11 +367,7 @@
                           ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                         </p>
                         <div class="campaign-card__wrap">
-                          <time
-                            class="campaign-card__date"
-                            datetime="2023-06-01/2023-09-30"
-                            >2023/6/1-9/30</time
-                          >
+                          <span class="campaign-card__date">2023/6/1-9/30</span>
                           <p class="contact__button-text">
                             ご予約・お問い合わせはコチラ
                           </p>
@@ -424,11 +413,7 @@
                           ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
                         </p>
                         <div class="campaign-card__wrap">
-                          <time
-                            class="campaign-card__date"
-                            datetime="2023-06-01/2023-09-30"
-                            >2023/6/1-9/30</time
-                          >
+                          <span class="campaign-card__date">2023/6/1-9/30</span>
                           <p class="contact__button-text">
                             ご予約・お問い合わせはコチラ
                           </p>
@@ -468,7 +453,7 @@
         </div>
       </div>
 
-      <section class="contact layout-contact layout-contact--campagin">
+      <section class="contact layout-contact layout-contact--campain">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
