--- a/src/contact.html
+++ b/src/contact.html
@@ -56,11 +56,11 @@
 
     <header class="header js-header">
       <div class="header__inner">
-        <h1 class="header__logo">
+        <div class="header__logo">
           <a href="./index.html">
             <img src="./assets/images/common/codeups.svg" alt="CodeUpsのロゴ" />
           </a>
-        </h1>
+        </div>
 
         <nav class="header__nav">
           <ul class="header__nav-items">
@@ -211,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">Contact</h2>
+          <h1 class="sub-page-title__main">Contact</h1>
         </div>
       </section>
 
@@ -236,7 +236,7 @@
           <div class="sub-contact__form">
             <div class="sub-contact__inner">
               <div class="error-message"></div>
-              <form class="contact-form" action="">
+              <form class="contact-form" action="contact.php">
                 <dl class="contact-form__wrap">
                   <div class="contact-form__label-wrap">
                     <dt class="contact-form__label">お名前<span>必須</span></dt>
