--- a/src/index.html
+++ b/src/index.html
@@ -593,7 +593,7 @@
             </li>
           </ul>
           <div class="blog__button">
-            <a href="#" class="button">
+            <a href="./blog.html" class="button">
               <span>View more</span>
             </a>
           </div>
