--- a/src/voice.html
+++ b/src/voice.html
@@ -56,11 +56,11 @@
 
     <header class="header js-header">
       <div class="header__inner">
-        <h1 class="header__logo">
+        <div class="header__logo">
           <a href="./index.html">
             <img src="./assets/images/common/codeups.svg" alt="CodeUpsのロゴ" />
           </a>
-        </h1>
+        </div>
 
         <nav class="header__nav">
           <ul class="header__nav-items">
@@ -211,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">voice</h2>
+          <h1 class="sub-page-title__main">Voice</h1>
         </div>
       </section>
 
@@ -453,7 +453,7 @@
         </div>
       </div>
 
-      <section class="contact layout-contact">
+      <section class="contact layout-contact layout-contact--voice">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -499,7 +499,7 @@
                 <p class="contact__button-text">ご予約・お問い合わせはコチラ</p>
               </div>
               <div class="contact__button">
-                <a href="#" class="button">
+                <a href="./contact.html" class="button">
                   <span>Contact us</span>
                 </a>
               </div>
@@ -509,7 +509,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-footer--voice">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
