--- a/src/404.html
+++ b/src/404.html
@@ -54,53 +54,213 @@
       />
     </div>
 
-    <header class="header js-header">
-      <div class="header__inner">
-        <h1 class="header__logo">
-          <a href="./index.html">
-            <img src="./assets/images/common/codeups.svg" alt="CodeUpsのロゴ" />
-          </a>
-        </h1>
+    <div class="wrap">
+      <header class="header js-header">
+        <div class="header__inner">
+          <div class="header__logo">
+            <a href="./index.html">
+              <img
+                src="./assets/images/common/codeups.svg"
+                alt="CodeUpsのロゴ"
+              />
+            </a>
+          </div>
 
-        <nav class="header__nav">
-          <ul class="header__nav-items">
-            <li class="header__nav-item">
-              <a href="./campaign.html">Campaign<span>キャンペーン</span></a>
-            </li>
-            <li class="header__nav-item">
-              <a href="./about-us.html">About us<span>私たちについて</span></a>
-            </li>
-            <li class="header__nav-item">
-              <a href="./information.html"
-                >Information<span>ダイビング情報</span></a
-              >
-            </li>
-            <li class="header__nav-item">
-              <a href="./blog.html">Blog<span>ブログ</span></a>
-            </li>
-            <li class="header__nav-item">
-              <a href="#">Voice<span>お客様の声</span></a>
-            </li>
-            <li class="header__nav-item">
-              <a href="#">Price<span>料金一覧</span></a>
-            </li>
-            <li class="header__nav-item">
-              <a href="./faq.html">FAQ<span>よくある質問</span></a>
-            </li>
-            <li class="header__nav-item">
-              <a href="./contact.html">Contact<span>お問合せ</span></a>
-            </li>
-          </ul>
-        </nav>
+          <nav class="header__nav">
+            <ul class="header__nav-items">
+              <li class="header__nav-item">
+                <a href="./campaign.html">Campaign<span>キャンペーン</span></a>
+              </li>
+              <li class="header__nav-item">
+                <a href="./about-us.html"
+                  >About us<span>私たちについて</span></a
+                >
+              </li>
+              <li class="header__nav-item">
+                <a href="./information.html"
+                  >Information<span>ダイビング情報</span></a
+                >
+              </li>
+              <li class="header__nav-item">
+                <a href="./blog.html">Blog<span>ブログ</span></a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#">Voice<span>お客様の声</span></a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#">Price<span>料金一覧</span></a>
+              </li>
+              <li class="header__nav-item">
+                <a href="./faq.html">FAQ<span>よくある質問</span></a>
+              </li>
+              <li class="header__nav-item">
+                <a href="./contact.html">Contact<span>お問合せ</span></a>
+              </li>
+            </ul>
+          </nav>
 
-        <button class="header__hamburger js-hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
+          <button class="header__hamburger js-hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
 
-        <div class="header__drawer js-drawer">
-          <div class="header__drawer-nav nav-contents">
+          <div class="header__drawer js-drawer">
+            <div class="header__drawer-nav nav-contents">
+              <nav class="nav-contents__wrap">
+                <ul class="nav-contents__contents">
+                  <li class="nav-contents__group">
+                    <div class="nav-contents__title">
+                      <a href="./campaign.html">キャンペーン</a>
+                    </div>
+                    <div>
+                      <ul class="nav-contents__items">
+                        <li class="nav-contents__item">
+                          <a href="#">ライセンス取得</a>
+                        </li>
+                        <li class="nav-contents__item">
+                          <a href="#">貸切体験ダイビング</a>
+                        </li>
+                        <li class="nav-contents__item">
+                          <a href="#">ナイトダイビング</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="nav-contents__title">
+                      <a href="./about-us.html">私たちについて</a>
+                    </div>
+                  </li>
+                </ul>
+
+                <ul class="nav-contents__contents">
+                  <li class="nav-contents__group">
+                    <div class="nav-contents__title">
+                      <a href="./voice.html">お客様の声</a>
+                    </div>
+                    <div class="nav-contents__title">
+                      <a href="./price.html">料金一覧</a>
+                    </div>
+                    <ul class="nav-contents__items">
+                      <li class="nav-contents__item">
+                        <a href="#">ライセンス講習</a>
+                      </li>
+                      <li class="nav-contents__item">
+                        <a href="#">体験ダイビング</a>
+                      </li>
+                      <li class="nav-contents__item">
+                        <a href="#">ファンダイビング</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+
+                <ul class="nav-contents__contents">
+                  <li class="nav-contents__group">
+                    <div class="nav-contents__title">
+                      <a href="./information.html">ダイビング情報</a>
+                    </div>
+                    <div>
+                      <ul class="nav-contents__items">
+                        <li class="nav-contents__item">
+                          <a href="#">ライセンス講習</a>
+                        </li>
+                        <li class="nav-contents__item">
+                          <a href="#">体験ダイビング</a>
+                        </li>
+                        <li class="nav-contents__item">
+                          <a href="#">ファンダイビング</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="nav-contents__title">
+                      <a href="./blog.html">ブログ</a>
+                    </div>
+                  </li>
+                </ul>
+
+                <ul class="nav-contents__contents">
+                  <li class="nav-contents__group">
+                    <div class="nav-contents__title">
+                      <a href="./faq.html">よくある質問</a>
+                    </div>
+                    <div class="nav-contents__title">
+                      <a href="./privacy-policy.html"
+                        >プライバシー<br class="u-mobile" />ポリシー</a
+                      >
+                    </div>
+                    <div class="nav-contents__title">
+                      <a href="./terms-of-service.html">利用規約</a>
+                    </div>
+                    <div class="nav-contents__title">
+                      <a href="./contact.html">お問い合わせ</a>
+                    </div>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <main>
+        <div class="error layout-error">
+          <div class="error__inner inner">
+            <div class="error__breadcrumb breadcrumb breadcrumb--white">
+              <div class="breadcrumb__inner">
+                <!-- Breadcrumb NavXTで出力される部分 ここから -->
+                <span>
+                  <a href="./index.html">
+                    <span>TOP</span>
+                  </a>
+                </span>
+                &nbsp;&gt;&nbsp;
+                <span>
+                  <span class="breadcrumb__current-item">404</span>
+                </span>
+                <!-- Breadcrumb NavXTで出力される部分 ここまで -->
+              </div>
+            </div>
+
+            <div class="error__content">
+              <h1 class="error__title">404</h1>
+              <div class="error__text-wrap">
+                <p class="error__text">申し訳ありません。</p>
+                <p class="error__text">お探しのページが見つかりません。</p>
+              </div>
+              <div class="error__button">
+                <a href="./index.html" class="button button--white">
+                  <span>Page TOP</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <footer class="footer layout-footer layout-footer--404">
+        <div class="footer__inner inner">
+          <div class="footer__wrap">
+            <div class="footer__logo">
+              <img
+                src="./assets/images/common/codeups.svg"
+                alt="CodeUpsのロゴ"
+              />
+            </div>
+            <div class="footer__sns">
+              <a href="#" class="footer__sns-icon"
+                ><img
+                  src="./assets/images/common/sns-icon_1.png"
+                  alt="facebookのアイコン"
+              /></a>
+              <a href="#" class="footer__sns-icon"
+                ><img
+                  src="./assets/images/common/sns-icon_2.png"
+                  alt="インスタグラムのアイコン"
+              /></a>
+            </div>
+          </div>
+
+          <div class="footer__nav nav-contents">
             <nav class="nav-contents__wrap">
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
@@ -193,162 +353,13 @@
             </nav>
           </div>
         </div>
-      </div>
-    </header>
-
-    <main>
-      <div class="error layout-error">
-        <div class="error__inner inner">
-          <div class="error__breadcrumb breadcrumb breadcrumb--white">
-            <div class="breadcrumb__inner">
-              <!-- Breadcrumb NavXTで出力される部分 ここから -->
-              <span>
-                <a href="./index.html">
-                  <span>TOP</span>
-                </a>
-              </span>
-              &nbsp;&gt;&nbsp;
-              <span>
-                <span class="breadcrumb__current-item">404</span>
-              </span>
-              <!-- Breadcrumb NavXTで出力される部分 ここまで -->
-            </div>
-          </div>
-
-          <div class="error__content">
-            <h1 class="error__title">404</h1>
-            <div class="error__text-wrap">
-              <p class="error__text">申し訳ありません。</p>
-              <p class="error__text">お探しのページが見つかりません。</p>
-            </div>
-            <div class="error__button">
-              <a href="./index.html" class="button button--white">
-                <span>Page TOP</span>
-              </a>
-            </div>
-          </div>
+        <div class="footer__copyright">
+          <small
+            >Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights
+            Reserved.</small
+          >
         </div>
-      </div>
-    </main>
-
-    <footer class="footer layout-footer layout-footer--404">
-      <div class="footer__inner inner">
-        <div class="footer__wrap">
-          <div class="footer__logo">
-            <img src="./assets/images/common/codeups.svg" alt="CodeUpsのロゴ" />
-          </div>
-          <div class="footer__sns">
-            <a href="#" class="footer__sns-icon"
-              ><img
-                src="./assets/images/common/sns-icon_1.png"
-                alt="facebookのアイコン"
-            /></a>
-            <a href="#" class="footer__sns-icon"
-              ><img
-                src="./assets/images/common/sns-icon_2.png"
-                alt="インスタグラムのアイコン"
-            /></a>
-          </div>
-        </div>
-
-        <div class="footer__nav nav-contents">
-          <nav class="nav-contents__wrap">
-            <ul class="nav-contents__contents">
-              <li class="nav-contents__group">
-                <div class="nav-contents__title">
-                  <a href="./campaign.html">キャンペーン</a>
-                </div>
-                <div>
-                  <ul class="nav-contents__items">
-                    <li class="nav-contents__item">
-                      <a href="#">ライセンス取得</a>
-                    </li>
-                    <li class="nav-contents__item">
-                      <a href="#">貸切体験ダイビング</a>
-                    </li>
-                    <li class="nav-contents__item">
-                      <a href="#">ナイトダイビング</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="nav-contents__title">
-                  <a href="./about-us.html">私たちについて</a>
-                </div>
-              </li>
-            </ul>
-
-            <ul class="nav-contents__contents">
-              <li class="nav-contents__group">
-                <div class="nav-contents__title">
-                  <a href="./voice.html">お客様の声</a>
-                </div>
-                <div class="nav-contents__title">
-                  <a href="./price.html">料金一覧</a>
-                </div>
-                <ul class="nav-contents__items">
-                  <li class="nav-contents__item">
-                    <a href="#">ライセンス講習</a>
-                  </li>
-                  <li class="nav-contents__item">
-                    <a href="#">体験ダイビング</a>
-                  </li>
-                  <li class="nav-contents__item">
-                    <a href="#">ファンダイビング</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-
-            <ul class="nav-contents__contents">
-              <li class="nav-contents__group">
-                <div class="nav-contents__title">
-                  <a href="./information.html">ダイビング情報</a>
-                </div>
-                <div>
-                  <ul class="nav-contents__items">
-                    <li class="nav-contents__item">
-                      <a href="#">ライセンス講習</a>
-                    </li>
-                    <li class="nav-contents__item">
-                      <a href="#">体験ダイビング</a>
-                    </li>
-                    <li class="nav-contents__item">
-                      <a href="#">ファンダイビング</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="nav-contents__title">
-                  <a href="./blog.html">ブログ</a>
-                </div>
-              </li>
-            </ul>
-
-            <ul class="nav-contents__contents">
-              <li class="nav-contents__group">
-                <div class="nav-contents__title">
-                  <a href="./faq.html">よくある質問</a>
-                </div>
-                <div class="nav-contents__title">
-                  <a href="./privacy-policy.html"
-                    >プライバシー<br class="u-mobile" />ポリシー</a
-                  >
-                </div>
-                <div class="nav-contents__title">
-                  <a href="./terms-of-service.html">利用規約</a>
-                </div>
-                <div class="nav-contents__title">
-                  <a href="./contact.html">お問い合わせ</a>
-                </div>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-      <div class="footer__copyright">
-        <small
-          >Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small
-        >
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
