--- a/src/blog.html
+++ b/src/blog.html
@@ -56,11 +56,11 @@
 
     <header class="header js-header">
       <div class="header__inner">
-        <h1 class="header__logo">
+        <div class="header__logo">
           <a href="./index.html">
             <img src="./assets/images/common/codeups.svg" alt="CodeUpsのロゴ" />
           </a>
-        </h1>
+        </div>
 
         <nav class="header__nav">
           <ul class="header__nav-items">
@@ -211,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">Blog</h2>
+          <h1 class="sub-page-title__main">Blog</h1>
         </div>
       </section>
 
@@ -580,7 +580,7 @@
                         </p>
 
                         <div class="review-card__button">
-                          <a href="#" class="button">
+                          <a href="./voice.html" class="button">
                             <span>View more</span>
                           </a>
                         </div>
@@ -674,7 +674,7 @@
                       </a>
                     </li>
                     <div class="review-card__button">
-                      <a href="#" class="button">
+                      <a href="./campaign.html" class="button">
                         <span>View more</span>
                       </a>
                     </div>
